Remove sample publications and improve CV publications formatting

--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -11,26 +11,22 @@ author_profile: true
 
 {% include base_path %}
 
-<!-- New style rendering if publication categories are defined -->
-{% if site.publication_category %}
-  {% for category in site.publication_category  %}
-    {% assign title_shown = false %}
-    {% for post in site.publications reversed %}
-      {% if post.category != category[0] %}
-        {% continue %}
+{% for publication in site.data.cv.publications %}
+  <div class="archive__item">
+    <div class="archive__item-title">
+      <h3 class="archive__item-title">{{ publication.name }}</h3>
+    </div>
+    <div class="archive__item-excerpt">
+      <p><strong>{{ publication.publisher }}</strong>, {{ publication.releaseDate | date: "%B %Y" }}</p>
+      {% if publication.summary %}
+        <p>{{ publication.summary }}</p>
       {% endif %}
-      {% unless title_shown %}
-        <h2>{{ category[1].title }}</h2><hr />
-        {% assign title_shown = true %}
-      {% endunless %}
-      {% include archive-single.html %}
-    {% endfor %}
-  {% endfor %}
-{% else %}
-  {% for post in site.publications reversed %}
-    {% include archive-single.html %}
-  {% endfor %}
-{% endif %}
+      {% if publication.website %}
+        <p><a href="{{ publication.website }}" target="_blank">[Link]</a></p>
+      {% endif %}
+    </div>
+  </div>
+{% endfor %}
 
 
 
